tests/paczka1/fuzzy1/63163260.err
Error in line 3: tdAQymD0 A710 38,7
Error in line 4: tdAQymD0 S274 94,0
Error in line 11: tdAQymD0 S274 19,1
Error in line 10: 1y6hobbKiV S274 8,4
Error in line 1: 6C1oxSUUPd S274 20,8
Error in line 23: sCuJ75Nhnt S288 69,5
Error in line 31: sCuJ75Nhnt A710 71,1
Error in line 32: sCuJ75Nhnt S969 69,9
